--- a/style.css
+++ b/style.css
@@ -369,3 +369,14 @@ child li of navigation will float left, instead of all list elements
 .navigation li{
 	float: left;
 }
+
+/*
+a in the nav bar, removing underline and adjusting looks
+*/
+.navigation li a{
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
