--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ To be horizontal nav bar using a ul
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #dddddd;
+	background-color: #757171;
 }
 
 /*
