--- a/style.css
+++ b/style.css
@@ -403,3 +403,16 @@ active nav bar option to make it obvious
 	text-align: center;
 	padding: 14px 16px;
 }
+
+/*
+added indexbox attributes
+*/
+.indexbox{
+	margin: 5%;
+	padding: 0em;
+	width: 40%;
+	float: left;
+	border-style: dotted;
+	border-width: .5em;
+	border-color: red;
+}
