--- a/style.css
+++ b/style.css
@@ -409,10 +409,11 @@ added indexbox attributes
 */
 .indexbox{
 	margin: 5%;
-	padding: 0em;
-	width: 40%;
+	padding: .5em;
+	width: 35%;
 	float: left;
 	border-style: dotted;
 	border-width: .5em;
 	border-color: red;
+	text-align: center;
 }
