--- a/style.css
+++ b/style.css
@@ -425,3 +425,19 @@ ID made explicitly to show off text overflow set to hidden.
 	overflow: hidden;
 	height: 10.5em;
 }
+
+/*
+modify order list bullet type
+*/
+ol{
+	list-style-type: upper-latin;
+}
+
+/*
+Adjusting h1 attributes
+*/
+h1{
+	font-size: 2.5em;
+	color: red;
+	text-decoration: underline;
+}
