adjusted h1, added tables and children attributes

--- a/style.css
+++ b/style.css
@@ -437,7 +437,23 @@ ol{
 Adjusting h1 attributes
 */
 h1{
+	position: relative;
+	left: 1em;
 	font-size: 2.5em;
 	color: red;
 	text-decoration: underline;
+}
+
+table, td, th{
+	border-style: double;
+	border-width: .3em;
+	border-collapse: collapse;
+	border-color: black;
+	padding: .1em;
+}
+
+table{
+	width: 600px;
+	height: 500px;
+	position: fixed;
 }
