--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ Added body background that repeats evenly, font family from googleapis. Universa
 */
 body{
 	background-image: url("media/pattern.jpg");
-	background-repeat: x y;
+	background-repeat: repeat-x repeat-y;
 	font-family:"Archivo Narrow", sans serif;
 }
 
@@ -482,7 +482,7 @@ dummy text to add enough screen space so that the screen scrolls. Other element:
 #dummy{
 	text-align: center;
 	color: orange;
-	text-decoration: italic;
+	font-style: italic;
 	background-color: blue;
 }
 
@@ -499,7 +499,7 @@ contact info on resume. Resume element: 1;
 Adjusting the h3 within the contact, giving it a bit more prominence. Resume element 2;
 */
 #contract h3{
-	text-decoration: bold;
+	font-weight: bolder;
 	font-size: 1.5em;
 }
 
@@ -519,5 +519,5 @@ encompassing boxes around resume info. Resume element 3;
 h3 children of resumebox. Resume element 4;
 */
 .resumebox h3{
-	text-decoration: bold;
+	font-weight: bolder;
 }
